Add Basic Search Feature with Button Click

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,6 +8,7 @@
         "ignoreAtRules": [
           "tailwind",
           "apply",
+          "layer",
           "variants",
           "responsive",
           "screen"
@@ -20,6 +21,7 @@
         "ignoreAtRules": [
           "tailwind",
           "apply",
+          "layer",
           "variants",
           "responsive",
           "screen"
