--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: TrendingSearch_development
+  database: WebArena_development
   user: postgres
   port: 5433
 
@@ -31,7 +31,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: TrendingSearch
+  #username: WebArena
 
   # The password associated with the postgres role (username).
   #password:
@@ -59,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: TrendingSearch_test
+  database: WebArena_test
   user: postgres
   port: 5433
 
@@ -85,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: TrendingSearch_production
-  username: TrendingSearch
-  password: <%= ENV["TRENDINGSEARCH_DATABASE_PASSWORD"] %>
+  database: WebArena_production
+  username: WebArena
+  password: <%= ENV["WebArena_DATABASE_PASSWORD"] %>
